# grupka-miesiac-vibecodingu-stream1

./: .env.example  .gitignore  CLAUDE.md  docker-compose.yml  shell.nix
backend/: Dockerfile  cache.py  gus_client.py  main.py  nbp_client.py  pyproject.toml
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.tsx  api.ts  i18n.ts
frontend/src/components/: CityCompare.tsx  Navbar.tsx  PolandMap.tsx  PriceChart.tsx  StatsCard.tsx
frontend/src/locales/: de.json  en.json  pl.json
nginx/: nginx.conf.template
