[project]
name = "dashboard-mieszkaniowy"
version = "0.1.0"
description = "Dashboard mieszkaniowy Polski - backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "httpx>=0.28.0",
    "openpyxl>=3.1.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
